updated front end
- Basically everything except for mobile responsiveness

--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -204,7 +204,7 @@
           <h2 class="text-2xl font-semibold">Tas Wanita</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="/membership" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner2" class="banner mb-4">
