--- a/sellandbuy/src/templates/membership/form-awal.ejs
+++ b/sellandbuy/src/templates/membership/form-awal.ejs
@@ -194,15 +194,15 @@
                 <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
                 <form>
                   <div class="my-4 mr-4 inline-block">
-                    <label class="block text-gray-700">Nama depan</label>
+                    <label class="block text-gray-700">Nama depan<span class="text-red-500">*</span></label>
                     <input type="text" class="w-64 px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Nama depan" required>
                   </div>
                   <div class="mb-4 inline-block">
-                    <label class="block text-gray-700">Nama belakang</label>
+                    <label class="block text-gray-700">Nama belakang<span class="text-red-500">*</span></label>
                     <input type="text" class="w-64 px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Nama belakang" required>
                   </div>
                   <div class="mb-4">
-                    <label class="block text-gray-700">Nomor telepon</label>
+                    <label class="block text-gray-700">Nomor telepon<span class="text-red-500">*</span></label>
                     <input type="text" class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Nomor telepon" required>
                   </div>
                   <div class="mb-4">
@@ -210,15 +210,15 @@
                     <input type="text" class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Alamat domisili (opsional)">
                   </div>
                   <div class="mb-4">
-                    <label class="block text-gray-700">Provinsi domisili</label>
+                    <label class="block text-gray-700">Provinsi domisili<span class="text-red-500">*</span></label>
                     <input type="text" class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Provinsi domisili" required>
                   </div>
                   <div class="mb-4">
-                    <label class="block text-gray-700">Kota / Kabupaten domisili</label>
+                    <label class="block text-gray-700">Kota / Kabupaten domisili<span class="text-red-500">*</span></label>
                     <input type="text" class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Kota / Kabupaten domisili" required>
                   </div>
                   <div class="mb-4">
-                    <label class="block text-gray-700">Kecamatan domisili</label>
+                    <label class="block text-gray-700">Kecamatan domisili<span class="text-red-500">*</span></label>
                     <input type="text" class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75" placeholder="Kecamatan domisili" required>
                   </div>
                   <div class="mb-4">
@@ -232,7 +232,7 @@
                   </div>
                   <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
                   <div>
-                  <button class="bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900" onclick="location.href = '/membership/payment'">Buat Tagihan Pembayaran</button>
+                  <button class="bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900" type="submit">Buat Tagihan Pembayaran</button>
                     <p class="mt-2"> Dengan checkout, Anda setuju dengan <strong>Kebijakan Privasi</strong> Penggunaan kami dan mengonfirmasi bahwa Anda telah membaca 
                       <strong>Kebijakan Privasi</strong> kami. Anda dapat membatalkan biaya perpanjangan layanan kapan saja.</p>
                   </div>
