--- a/sellandbuy/src/templates/Template.ejs
+++ b/sellandbuy/src/templates/Template.ejs
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
@@ -41,7 +41,7 @@
                 aria-expanded="false"
                 aria-haspopup="true"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
+                <img class="w-btn-pfl" src="/images/pictures/default.png" />
               </button>
             </div>
             <div
@@ -70,7 +70,7 @@
             <img
               id="logo"
               class="h-5 sm:h-9 sm:w-auto cursor-pointer"
-              src="images/navbar-logo.png"
+              src="/images/navbar-logo.png"
             />
           </a>
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
@@ -79,7 +79,7 @@
               href="#"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
@@ -215,7 +215,7 @@
               class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
             >
               <img
-                src="images/footer-logo.png"
+                src="/images/footer-logo.png"
                 class="w-[150px] sm:w-[300px] mr-[5px]"
               />
               <span
@@ -238,16 +238,16 @@
               class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
             >
               <a href="#" class="flex items-center"
-                ><img src="images/instagram.png"
+                ><img src="/images/instagram.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/whatsapp.png"
+                ><img src="/images/whatsapp.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/linkedin.png"
+                ><img src="/images/linkedin.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/email.png"
+                ><img src="/images/email.png"
               /></a>
             </div>
           </div>
@@ -294,6 +294,6 @@
 
     </script>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
