--- a/sellandbuy/src/templates/market/detail-item.ejs
+++ b/sellandbuy/src/templates/market/detail-item.ejs
@@ -226,7 +226,7 @@
                 <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
                 <div class="flex flex-row items-center">
                   <div>
-                    <img class="w-20 h-20 rounded-full my-3 hover:border-2 hover:border-gray-300 transition delay-100 cursor-pointer" onclick="location.href = '/profile/pengguna-lain'" src="images/pictures/ex-img.png" alt="Profile Photo">
+                    <img class="w-20 h-20 rounded-full my-3 hover:border-2 hover:border-gray-300 transition delay-100 cursor-pointer" onclick="location.href = '/pengguna-lain'" src="images/pictures/ex-img.png" alt="Profile Photo">
                   </div>
                   <div>
                     <div class="flex flex-col ml-3">
@@ -360,8 +360,6 @@
         moreText.style.display = "inline";
       }
     }
-        
-
     </script>
 
     <script src="js/script.js"></script>
