--- a/sellandbuy/src/templates/membership/membership.ejs
+++ b/sellandbuy/src/templates/membership/membership.ejs
@@ -196,7 +196,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-gray-100 transition delay-100" onclick="location.href = '/membership/form'">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100" onclick="location.href = '/membership/form'">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
@@ -212,7 +212,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-gray-100 transition delay-100">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
@@ -228,7 +228,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-gray-100 transition delay-100">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
