--- a/sellandbuy/src/templates/profile/item/edit-item.ejs
+++ b/sellandbuy/src/templates/profile/item/edit-item.ejs
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sell & Buy - Item Details</title>
+    <title>Sell & Buy - Edit Item Details</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
@@ -41,7 +41,7 @@
                 aria-expanded="false"
                 aria-haspopup="true"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
+                <img class="w-btn-pfl" src="/images/pictures/default.png" />
               </button>
             </div>
             <div
@@ -70,7 +70,7 @@
             <img
               id="logo"
               class="h-5 sm:h-9 sm:w-auto cursor-pointer"
-              src="images/navbar-logo.png"
+              src="/images/navbar-logo.png"
             />
           </a>
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
@@ -79,7 +79,7 @@
               href="#"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
@@ -178,7 +178,101 @@
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
+    <div class="container mx-auto p-4">
+      <h1 class="text-5xl font-bold mb-2">Isi Detail Produk</h1>
+      <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
+          
+          <!-- Form Section -->
+          <form>
+            <div class="flex flex-row mt-7">
+              <div class="w-1/2 mr-7">
+                <h2 class="text-3xl font-bold mb-1">Detail Produk</h2>
+                <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
+                <div class="grid grid-cols-2 md:grid-cols-2 gap-6 mt-2">
+                  <div class="col-span-2">
+                    <label class="block text-sm font-medium text-gray-700">Nama produk<span class="text-red-500">*</span></label>
+                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm px-1" required>
+                  </div>
+                  <div>
+                    <label class="block text-sm font-medium text-gray-700">Kategori produk<span class="text-red-500">*</span></label>
+                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" required>
+                  </div>
+                  <div>
+                    <label class="block text-sm font-medium text-gray-700">Harga produk<span class="text-red-500">*</span></label>
+                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" required>
+                  </div>
+                  <div class="col-span-2">
+                    <label class="block text-sm font-medium text-gray-700">Alasan menjual produk</label>
+                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm">
+                  </div>
+                  <div class="col-span-2">
+                    <label class="block text-sm font-medium text-gray-700">Deskripsi Produk</label>
+                    <textarea class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" rows="4"></textarea>
+                  </div>
+                </div>
+              </div>
+            
+              
+              <!-- Image Section -->
+                <div class="mt-6 w-1/2">
+                  <!-- Image Container -->
+                  <div class="border-2 border-gray-500 rounded-xl p-7">
+                    <h2 class="text-3xl font-bold mb-1">Tambahkan Gambar / Foto Produk</h2>
+                    <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
+                    <div class="grid grid-cols-4 md:grid-cols-4 gap-4 mt-4">
+                      <label>
+                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
+                          <span class="text-3xl">+</span>
+                        </div>
+                        <input type="file" class="hidden"/>
+                      </label>
+                      <label>
+                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
+                          <span class="text-3xl">+</span>
+                        </div>
+                        <input type="file" class="hidden"/>
+                      </label>
+                      <label>
+                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
+                          <span class="text-3xl">+</span>
+                        </div>
+                        <input type="file" class="hidden"/>
+                      </label>
+                      <label>
+                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
+                          <span class="text-3xl">+</span>
+                        </div>
+                        <input type="file" class="hidden"/>
+                      </label>
+                    </div>
+                  </div>
 
+                    <!-- Checkbox -->
+                    <div class="mt-6">
+                    <label class="inline-flex items-center">
+                      <input type="checkbox" class="form-checkbox cursor-pointer" required>
+                      <span class="ml-2 text-sm text-gray-700">Dengan menggunakan layanan kami, Anda memercayakan informasi Anda kepada kami. 
+                        Kami paham bahwa melindungi informasi Anda dan memberikan kontrol kepada Anda adalah tanggung jawab yang besar dan memerlukan 
+                        kerja keras.</span>
+                    </label>
+                    <label class="inline-flex items-center mt-4">
+                      <input type="checkbox" class="form-checkbox cursor-pointer" required>
+                      <span class="ml-2 text-sm text-gray-700">Saya dengan ini menyatakan bahwa saya telah membaca dan memahami semua ketentuan dan 
+                        kebijakan yang terkait dengan penggunaan aplikasi/website ini. Saya sepenuhnya setuju dan bersedia mematuhi semua aturan yang telah ditetapkan. 
+                        Saya menyadari bahwa ketidakpatuhan terhadap kebijakan ini dapat mengakibatkan tindakan penghentian akses atau tindakan lain sesuai ketentuan yang 
+                        berlaku.</span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+            <!-- Button -->
+            <div class="mt-6 w-1/4 mx-auto shadow-md">
+              <button type="submit" class="w-full bg-black text-xl text-white font-bold py-2 rounded-md">Simpan Perubahan</button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -215,7 +309,7 @@
               class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
             >
               <img
-                src="images/footer-logo.png"
+                src="/images/footer-logo.png"
                 class="w-[150px] sm:w-[300px] mr-[5px]"
               />
               <span
@@ -238,16 +332,16 @@
               class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
             >
               <a href="#" class="flex items-center"
-                ><img src="images/instagram.png"
+                ><img src="/images/instagram.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/whatsapp.png"
+                ><img src="/images/whatsapp.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/linkedin.png"
+                ><img src="/images/linkedin.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/email.png"
+                ><img src="/images/email.png"
               /></a>
             </div>
           </div>
@@ -294,6 +388,6 @@
 
     </script>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
